<package format="3">
  <name>franka_description</name>
  <version>0.1.0</version>
  <description>Franka robot description package</description>

  <maintainer email="ingyu@robotics.com">Ingyu</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
